i9500: version 7.1, re-enabled multi-core power save, disabled impulse

--- a/arch/arm/configs/nvmcm_defconfig
+++ b/arch/arm/configs/nvmcm_defconfig
@@ -39,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v7.0-29092016"
+CONFIG_LOCALVERSION=".nevermore-v7.1-29092016"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -629,7 +629,7 @@ CONFIG_HAVE_SMP=y
 CONFIG_SMP=y
 CONFIG_SMP_ON_UP=y
 CONFIG_ARM_CPU_TOPOLOGY=y
-# CONFIG_SCHED_MC is not set
+CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
 CONFIG_BL_SWITCHER=y
@@ -756,7 +756,7 @@ CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
-CONFIG_CPU_FREQ_GOV_IMPULSE=y
+# CONFIG_CPU_FREQ_GOV_IMPULSE is not se
 CONFIG_CPU_FREQ_GOV_ABYSSPLUG=y
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
