i9500: enabled camera & vibrator for cm, reduce hotplug agressiveness

--- a/arch/arm/configs/nvmcm_defconfig
+++ b/arch/arm/configs/nvmcm_defconfig
@@ -35,11 +35,14 @@ CONFIG_HAVE_IRQ_WORK=y
 #
 # General setup
 #
+CONFIG_VIBRATOR_CM=y
+CONFIG_CAMERA_CM=y
+CONFIG_GPIO_CM=y
 CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v7.2-01102016"
+CONFIG_LOCALVERSION=".nevermore-v7.3-02102016"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
