--- a/arch/arm/configs/nvmtw_defconfig
+++ b/arch/arm/configs/nvmtw_defconfig
@@ -39,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v7.3-02102016"
+CONFIG_LOCALVERSION=".nevermore-v7.5-07102016"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -414,7 +414,7 @@ CONFIG_EXYNOS_DEV_TMU=y
 CONFIG_EXYNOS5410_BTS=y
 CONFIG_EXYNOS5_CLUSTER_POWER_CONTROL=y
 CONFIG_EXYNOS5_C2_STATE_IDLE=y
-CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG=y
+# CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG is not set
 # CONFIG_ASV_MARGIN_TEST is not set
 
 #
@@ -2893,7 +2893,7 @@ CONFIG_DEVFREQ_GOV_SIMPLE_USAGE=y
 # CONFIG_DEVFREQ_GOV_PERFORMANCE is not set
 # CONFIG_DEVFREQ_GOV_PM_QOS is not set
 # CONFIG_DEVFREQ_GOV_POWERSAVE is not set
-CONFIG_DEVFREQ_GOV_USERSPACE=y
+# CONFIG_DEVFREQ_GOV_USERSPACE is not set
 
 #
 # DEVFREQ Drivers
