cpufreq: remove A7 overclock for stability

--- a/arch/arm/configs/nvmcm_defconfig
+++ b/arch/arm/configs/nvmcm_defconfig
@@ -38,12 +38,11 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_VIBRATOR_CM=y
 CONFIG_CAMERA_CM=y
 CONFIG_GPIO_CM=y
-CONFIG_CM=y
 CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v7.5-07102016"
+CONFIG_LOCALVERSION=".nevermore-v7.6-08102016"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -221,12 +220,12 @@ CONFIG_IOSCHED_BFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_BFQ is not set
-# CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_SIO is not set
-CONFIG_DEFAULT_FIOPS=y
+CONFIG_DEFAULT_SIOPLUS=y
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_ZEN is not set
-CONFIG_DEFAULT_IOSCHED="fiops"
+CONFIG_DEFAULT_IOSCHED="sioplus"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
