--- a/security/Makefile
+++ b/security/Makefile
@@ -17,12 +17,7 @@ obj-$(CONFIG_MMU)			+= min_addr.o
 obj-$(CONFIG_SECURITY)			+= security.o capability.o
 obj-$(CONFIG_SECURITYFS)		+= inode.o
 # Must precede capability.o in order to stack properly.
-
-ifdef $(CONFIG_CM)
-obj-$(CONFIG_SECURITY_SELINUX)		+= selinux1/built-in.o
-else
-obj-$(CONFIG_SECURITY_SELINUX)		+= selinux2/built-in.o
-endif
+obj-$(CONFIG_SECURITY_SELINUX)		+= selinux/built-in.o
 obj-$(CONFIG_SECURITY_SMACK)		+= smack/built-in.o
 obj-$(CONFIG_AUDIT)			+= lsm_audit.o
 obj-$(CONFIG_SECURITY_TOMOYO)		+= tomoyo/built-in.o
