--- a/arch/arm/configs/nvmcm_defconfig
+++ b/arch/arm/configs/nvmcm_defconfig
@@ -42,7 +42,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v7.7-12102016"
+CONFIG_LOCALVERSION=".nevermore-v7.7-15102016"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -416,7 +416,7 @@ CONFIG_EXYNOS_DEV_TMU=y
 # CONFIG_EXYNOS_TMU is not set
 CONFIG_EXYNOS5410_BTS=y
 CONFIG_EXYNOS5_CLUSTER_POWER_CONTROL=y
-CONFIG_EXYNOS5410_DEBUG=y
+# CONFIG_EXYNOS5410_DEBUG is not set
 CONFIG_EXYNOS5_C2_STATE_IDLE=y
 # CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG is not set
 # CONFIG_ASV_MARGIN_TEST is not set
@@ -518,30 +518,13 @@ CONFIG_USB_CDFS_SUPPORT=y
 #
 # Debugging Feature
 #
-CONFIG_SEC_DEBUG=y
-CONFIG_SEC_DEBUG_SCHED_LOG=y
-# CONFIG_SEC_DEBUG_SOFTIRQ_LOG is not set
-CONFIG_SEC_DEBUG_SCHED_LOG_NONCACHED=y
-# CONFIG_SEC_DEBUG_TIMER_LOG is not set
-# CONFIG_SEC_DEBUG_SEMAPHORE_LOG is not set
-CONFIG_SEC_DEBUG_USER=y
-# CONFIG_SEC_DEBUG_PM_TEMP is not set
-# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
-CONFIG_SEC_DEBUG_AUXILIARY_LOG=y
-CONFIG_SEC_DEBUG_FUPLOAD_DUMP_MORE=y
-# CONFIG_SEC_DEBUG_UMP_ALLOC_FAIL is not set
-CONFIG_SEC_DEBUG_LIST_PANIC=y
-# CONFIG_SEC_DEBUG_IOVMM is not set
-# CONFIG_SEC_FILE_LEAK_DEBUG is not set
-# CONFIG_SEC_DEBUG_TIMERQUEUE_CORRUPTION is not set
-# CONFIG_SEC_WATCHDOG_RESET is not set
+# CONFIG_SEC_DEBUG is not set
 CONFIG_ANDROID_WIP=y
 CONFIG_ANDROID_OOM_KILLER=y
 CONFIG_INTERNAL_ISP_START_CAMERA=y
 CONFIG_SEC_LOG=y
 CONFIG_SEC_LOG_NONCACHED=y
 # CONFIG_SEC_LOG_LAST_KMSG is not set
-CONFIG_SEC_AVC_LOG=y
 # CONFIG_TIMA_DEBUG_LOG is not set
 # CONFIG_KOR_B10_DEBUG is not set
 
@@ -636,7 +619,7 @@ CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
 CONFIG_BL_SWITCHER=y
-CONFIG_BL_SWITCHER_DUMMY_IF=y
+# CONFIG_BL_SWITCHER_DUMMY_IF is not set
 CONFIG_VMSPLIT_3G=y
 # CONFIG_VMSPLIT_2G is not set
 # CONFIG_VMSPLIT_1G is not set
@@ -649,8 +632,8 @@ CONFIG_ARCH_NR_GPIO=0
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ_300=y
-CONFIG_HZ=300
+CONFIG_HZ_200=y
+CONFIG_HZ=200
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
@@ -666,8 +649,8 @@ CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
-CONFIG_COMPACTION=y
-CONFIG_MIGRATION=y
+# CONFIG_COMPACTION is not set
+# CONFIG_MIGRATION is not set
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
@@ -677,7 +660,7 @@ CONFIG_UKSM=y
 # CONFIG_KSM_LEGACY is not set
 CONFIG_KSM_CHECK_PAGE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
-CONFIG_CLEANCACHE=y
+# CONFIG_CLEANCACHE is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
@@ -692,10 +675,10 @@ CONFIG_INCREASE_MAXIMUM_SWAPPINESS=y
 CONFIG_FIX_INACTIVE_RATIO=y
 CONFIG_TIGHT_PGDAT_BALANCE=y
 # CONFIG_SWAP_ENABLE_READAHEAD is not set
-# CONFIG_FADV_NOACTIVE is not set
+CONFIG_FADV_NOACTIVE=y
 CONFIG_MIN_DIRTY_THRESH_PAGES=2560
 CONFIG_FORCE_MAX_ZONEORDER=11
-CONFIG_ALIGNMENT_TRAP=y
+# CONFIG_ALIGNMENT_TRAP is not set
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
@@ -804,7 +787,7 @@ CONFIG_KERNEL_MODE_NEON=y
 CONFIG_BINFMT_ELF=y
 CONFIG_ARCH_BINFMT_ELF_RANDOMIZE_PIE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-CONFIG_HAVE_AOUT=y
+# CONFIG_HAVE_AOUT is not set
 # CONFIG_BINFMT_AOUT is not set
 CONFIG_BINFMT_MISC=y
 
@@ -1591,7 +1574,7 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_OMAP4 is not set
 # CONFIG_KEYBOARD_XTKBD is not set
 CONFIG_SENSORS_HALL=y
-CONFIG_SENSORS_HALL_IRQ_CTRL=y
+# CONFIG_SENSORS_HALL_IRQ_CTRL is not set
 CONFIG_KEYBOARD_CYPRESS_TOUCH=y
 # CONFIG_INPUT_MOUSE is not set
 # CONFIG_INPUT_JOYSTICK is not set
@@ -2230,7 +2213,7 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
-CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=5120
+CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=16384
 CONFIG_ION_EXYNOS_DRM_MFC_SH=y
 CONFIG_ION_EXYNOS_DRM_MSGBOX_SH=y
 CONFIG_ION_EXYNOS_DRM_MFC_FW=y
@@ -2423,7 +2406,7 @@ CONFIG_USB_DEVICEFS=y
 CONFIG_USB_DEVICE_CLASS=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
 CONFIG_USB_SUSPEND=y
-CONFIG_USB_OTG=y
+# CONFIG_USB_OTG is not set
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 CONFIG_HOST_COMPLIANT_TEST=y
@@ -2432,7 +2415,7 @@ CONFIG_USB_HOST_NOTIFY=y
 CONFIG_USB_EXYNOS_DRD=y
 CONFIG_USB_EXYNOS5_USB3_DRD_CH0=y
 # CONFIG_USB_EXYNOS5_USB3_DRD_CH1 is not set
-CONFIG_USB_DWC3_DEBUG=y
+# CONFIG_USB_DWC3_DEBUG is not set
 # CONFIG_USB_DWC3_VERBOSE is not set
 # CONFIG_USB_MON is not set
 # CONFIG_USB_WUSB_CBAF is not set
@@ -2849,8 +2832,6 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_SEC_OOM_KILLER is not set
 # CONFIG_ANDROID_SWITCH is not set
 CONFIG_ANDROID_INTF_ALARM_DEV=y
-CONFIG_SAMP_HOTNESS=y
-CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
 CONFIG_VNSWAP=y
@@ -2883,7 +2864,7 @@ CONFIG_DEVFREQ_GOV_SIMPLE_USAGE=y
 # CONFIG_DEVFREQ_GOV_PERFORMANCE is not set
 # CONFIG_DEVFREQ_GOV_PM_QOS is not set
 # CONFIG_DEVFREQ_GOV_POWERSAVE is not set
-# CONFIG_DEVFREQ_GOV_USERSPACE is not set
+CONFIG_DEVFREQ_GOV_USERSPACE=y
 
 #
 # DEVFREQ Drivers
@@ -3145,8 +3126,8 @@ CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
-CONFIG_SCHED_DEBUG=y
-CONFIG_SCHEDSTATS=y
+# CONFIG_SCHED_DEBUG is not set
+# CONFIG_SCHEDSTATS is not set
 # CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
@@ -3166,12 +3147,12 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
 # CONFIG_DEBUG_KOBJECT is not set
 # CONFIG_DEBUG_HIGHMEM is not set
-CONFIG_DEBUG_BUGVERBOSE=y
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_BUGVERBOSE is not set
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_VM is not set
 # CONFIG_DEBUG_WRITECOUNT is not set
 # CONFIG_DEBUG_MEMORY_INIT is not set
-CONFIG_DEBUG_LIST=y
+# CONFIG_DEBUG_LIST is not set
 # CONFIG_TEST_LIST_SORT is not set
 # CONFIG_DEBUG_SG is not set
 # CONFIG_DEBUG_NOTIFIERS is not set
@@ -3225,7 +3206,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
-CONFIG_DEBUG_USER=y
+# CONFIG_DEBUG_USER is not set
 # CONFIG_DEBUG_RODATA is not set
 # CONFIG_DEBUG_LL is not set
 # CONFIG_OC_ETM is not set
