--- a/arch/arm/configs/nvmtw_defconfig
+++ b/arch/arm/configs/nvmtw_defconfig
@@ -18,7 +18,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_LOCKBREAK=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -39,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v7.7-12102016"
+CONFIG_LOCALVERSION=".nevermore-v7.7-15102016"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -88,7 +88,7 @@ CONFIG_LOG_BUF_SHIFT=17
 CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_TIMER_SLACK=y
-CONFIG_CGROUP_DYNAMIC_TIMER_SLACK=y
+# CONFIG_CGROUP_DYNAMIC_TIMER_SLACK is not set
 # CONFIG_CGROUP_DEVICE is not set
 # CONFIG_CPUSETS is not set
 CONFIG_CGROUP_CPUACCT=y
@@ -96,19 +96,14 @@ CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_CGROUP_MEM_RES_CTLR is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
-CONFIG_CFS_BANDWIDTH=y
+# CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
 # CONFIG_BLK_CGROUP is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
-CONFIG_NAMESPACES=y
-# CONFIG_UTS_NS is not set		
-CONFIG_IPC_NS=y		
-# CONFIG_USER_NS is not set		
-# CONFIG_PID_NS is not set		
-CONFIG_NET_NS=y
+# CONFIG_NAMESPACES is not set
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
-CONFIG_RELAY=y
+# CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
@@ -133,7 +128,7 @@ CONFIG_SIGNALFD=y
 CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
-CONFIG_AIO=y
+# CONFIG_AIO is not set
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
@@ -154,8 +149,6 @@ CONFIG_TRACEPOINTS=y
 CONFIG_HAVE_OPROFILE=y
 # CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
-CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
-CONFIG_ARCH_USE_BUILTIN_BSWAP=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
@@ -173,8 +166,7 @@ CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
-CONFIG_LBDAF=y
-CONFIG_BLK_DEV_BSG=y
+# CONFIG_BLK_DEV_BSG is not set
 # CONFIG_BLK_DEV_BSGLIB is not set
 # CONFIG_BLK_DEV_INTEGRITY is not set
 
@@ -613,7 +605,7 @@ CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_HAVE_ARM_SCU=y
 CONFIG_BL_SWITCHER=y
-CONFIG_BL_SWITCHER_DUMMY_IF=y
+# CONFIG_BL_SWITCHER_DUMMY_IF is not set
 CONFIG_VMSPLIT_3G=y
 # CONFIG_VMSPLIT_2G is not set
 # CONFIG_VMSPLIT_1G is not set
@@ -626,8 +618,8 @@ CONFIG_ARCH_NR_GPIO=0
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ=300
-CONFIG_HZ_300=y
+CONFIG_HZ=200
+CONFIG_HZ_200=y
 # CONFIG_THUMB2_KERNEL is not set
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
@@ -643,8 +635,8 @@ CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=4
-CONFIG_COMPACTION=y
-CONFIG_MIGRATION=y
+# CONFIG_COMPACTION is not set
+# CONFIG_MIGRATION is not set
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
@@ -672,10 +664,8 @@ CONFIG_TIGHT_PGDAT_BALANCE=y
 CONFIG_FADV_NOACTIVE=y
 CONFIG_MIN_DIRTY_THRESH_PAGES=2560
 CONFIG_FORCE_MAX_ZONEORDER=11
-CONFIG_ALIGNMENT_TRAP=y
+# CONFIG_ALIGNMENT_TRAP is not set
 # CONFIG_UACCESS_WITH_MEMCPY is not set
-CONFIG_ARM_PLD_64BYTE=y
-CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
@@ -782,7 +772,7 @@ CONFIG_KERNEL_MODE_NEON=y
 CONFIG_BINFMT_ELF=y
 CONFIG_ARCH_BINFMT_ELF_RANDOMIZE_PIE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
-CONFIG_HAVE_AOUT=y
+# CONFIG_HAVE_AOUT is not set
 CONFIG_BINFMT_MISC=y
 
 #
@@ -845,10 +835,10 @@ CONFIG_IP_PNP_DHCP=y
 # CONFIG_IP_MROUTE is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
-CONFIG_INET_AH=y
+# CONFIG_INET_AH is not set
 CONFIG_INET_ESP=y
-CONFIG_INET_IPCOMP=y
-CONFIG_INET_XFRM_TUNNEL=y
+# CONFIG_INET_IPCOMP is not set
+# CONFIG_INET_XFRM_TUNNEL is not set
 CONFIG_INET_TUNNEL=y
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
@@ -899,7 +889,7 @@ CONFIG_IPV6_SIT=y
 # CONFIG_IPV6_SIT_6RD is not set
 CONFIG_IPV6_NDISC_NODETYPE=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_SUBTREES=y
+# CONFIG_IPV6_SUBTREES is not set
 # CONFIG_IPV6_MROUTE is not set
 # CONFIG_NETLABEL is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
@@ -1112,7 +1102,7 @@ CONFIG_NET_SCHED=y
 # CONFIG_NET_SCH_CBQ is not set
 CONFIG_NET_SCH_HTB=y
 # CONFIG_NET_SCH_HFSC is not set
-CONFIG_NET_SCH_PRIO=y
+# CONFIG_NET_SCH_PRIO is not set
 # CONFIG_NET_SCH_MULTIQ is not set
 # CONFIG_NET_SCH_RED is not set
 # CONFIG_NET_SCH_SFB is not set
@@ -1136,21 +1126,21 @@ CONFIG_NET_CLS=y
 # CONFIG_NET_CLS_BASIC is not set
 # CONFIG_NET_CLS_TCINDEX is not set
 # CONFIG_NET_CLS_ROUTE4 is not set
-CONFIG_NET_CLS_FW=y
+# CONFIG_NET_CLS_FW is not set
 CONFIG_NET_CLS_U32=y
 # CONFIG_CLS_U32_PERF is not set
-CONFIG_CLS_U32_MARK=y
+C# ONFIG_CLS_U32_MARK is not set
 # CONFIG_NET_CLS_RSVP is not set
 # CONFIG_NET_CLS_RSVP6 is not set
-CONFIG_NET_CLS_FLOW=y
+# CONFIG_NET_CLS_FLOW is not set
 # CONFIG_NET_CLS_CGROUP is not set
 CONFIG_NET_EMATCH=y
 CONFIG_NET_EMATCH_STACK=32
-CONFIG_NET_EMATCH_CMP=y
-CONFIG_NET_EMATCH_NBYTE=y
+# CONFIG_NET_EMATCH_CMP is not set
+# CONFIG_NET_EMATCH_NBYTE is not set
 CONFIG_NET_EMATCH_U32=y
-CONFIG_NET_EMATCH_META=y
-CONFIG_NET_EMATCH_TEXT=y
+# CONFIG_NET_EMATCH_META is not set
+# CONFIG_NET_EMATCH_TEXT is not set
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_NET_ACT_GACT=y
@@ -1165,7 +1155,7 @@ CONFIG_NET_ACT_MIRRED=y
 # CONFIG_NET_CLS_IND is not set
 CONFIG_NET_SCH_FIFO=y
 # CONFIG_DCB is not set
-CONFIG_DNS_RESOLVER=y
+# CONFIG_DNS_RESOLVER is not set
 # CONFIG_BATMAN_ADV is not set
 # CONFIG_OPENVSWITCH is not set
 CONFIG_RPS=y
@@ -1185,11 +1175,6 @@ CONFIG_HAVE_BPF_JIT=y
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
 CONFIG_BT=y
-CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y		
-CONFIG_BT_BNEP_MC_FILTER=y		
-CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 
 #
@@ -1460,9 +1445,6 @@ CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_SLIP=y
 CONFIG_SLHC=y
-CONFIG_SLIP_COMPRESSED=y		
-# CONFIG_SLIP_SMART is not set		
-CONFIG_SLIP_MODE_SLIP6=y
 
 #
 # USB Network Adapters
@@ -2200,7 +2182,7 @@ CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_DRM is not set
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
-CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=5120
+CONFIG_ION_EXYNOS_CONTIGHEAP_SIZE=16384
 CONFIG_ION_EXYNOS_DRM_MFC_SH=y
 CONFIG_ION_EXYNOS_DRM_MSGBOX_SH=y
 CONFIG_ION_EXYNOS_DRM_MFC_FW=y
@@ -2860,7 +2842,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_SEC_OOM_KILLER is not set
 # CONFIG_ANDROID_SWITCH is not set
 CONFIG_ANDROID_INTF_ALARM_DEV=y
-CONFIG_ANDROID_LMK_ADJ_RBTREE=y
+# CONFIG_ANDROID_LMK_ADJ_RBTREE is not set
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
 CONFIG_VNSWAP=y
@@ -2893,7 +2875,7 @@ CONFIG_DEVFREQ_GOV_SIMPLE_USAGE=y
 # CONFIG_DEVFREQ_GOV_PERFORMANCE is not set
 # CONFIG_DEVFREQ_GOV_PM_QOS is not set
 # CONFIG_DEVFREQ_GOV_POWERSAVE is not set
-# CONFIG_DEVFREQ_GOV_USERSPACE is not set
+CONFIG_DEVFREQ_GOV_USERSPACE=y
 
 #
 # DEVFREQ Drivers
@@ -3137,7 +3119,7 @@ CONFIG_DETECT_HUNG_TASK=y
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
-CONFIG_SCHEDSTATS=y
+# CONFIG_SCHEDSTATS is not set
 # CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_STATS is not set
@@ -3203,7 +3185,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
-CONFIG_BLK_DEV_IO_TRACE=y
+# CONFIG_BLK_DEV_IO_TRACE is not set
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_DYNAMIC_DEBUG is not set
@@ -3215,7 +3197,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM_UNWIND is not set
-CONFIG_DEBUG_USER=y
+# CONFIG_DEBUG_USER is not set
 # CONFIG_DEBUG_RODATA is not set
 # CONFIG_DEBUG_LL is not set
 # CONFIG_OC_ETM is not set
@@ -3230,7 +3212,7 @@ CONFIG_DEBUG_USER=y
 #
 CONFIG_KEYS=y
 # CONFIG_ENCRYPTED_KEYS is not set
-CONFIG_KEYS_DEBUG_PROC_KEYS=y
+# CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
@@ -3310,7 +3292,7 @@ CONFIG_CRYPTO_HMAC=y
 #
 CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_GHASH is not set
-CONFIG_CRYPTO_MD4=y
+# CONFIG_CRYPTO_MD4 is not set
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
@@ -3373,7 +3355,7 @@ CONFIG_GENERIC_IO=y
 CONFIG_CRC_CCITT=y
 CONFIG_CRC16=y
 # CONFIG_CRC_T10DIF is not set
-CONFIG_CRC_ITU_T=y
+# CONFIG_CRC_ITU_T is not set
 CONFIG_CRC32=y
 # CONFIG_CRC32_SELFTEST is not set
 CONFIG_CRC32_SLICEBY8=y
