i9500: disbled suspend_time and enabled cleancache

--- a/arch/arm/configs/nvmtw_defconfig
+++ b/arch/arm/configs/nvmtw_defconfig
@@ -646,7 +646,7 @@ CONFIG_UKSM=y
 # CONFIG_KSM_LEGACY is not set
 CONFIG_KSM_CHECK_PAGE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
@@ -800,7 +800,7 @@ CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_CPU_PM=y
-CONFIG_SUSPEND_TIME=y
+# CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_NET=y
