--- a/arch/arm/configs/nvmtw_defconfig
+++ b/arch/arm/configs/nvmtw_defconfig
@@ -1539,8 +1539,17 @@ CONFIG_SENSORS_HALL=y
 # CONFIG_GPIO_CM is not set
 CONFIG_KEYBOARD_CYPRESS_TOUCH=y
 # CONFIG_INPUT_MOUSE is not set
-# CONFIG_INPUT_JOYSTICK is not set
-# CONFIG_INPUT_TABLET is not set
+CONFIG_INPUT_JOYSTICK=y
+CONFIG_JOYSTICK_XPAD=y		
+CONFIG_JOYSTICK_XPAD_FF=y		
+CONFIG_JOYSTICK_XPAD_LEDS=y		
+CONFIG_INPUT_TABLET=y		
+CONFIG_TABLET_USB_ACECAD=y		
+CONFIG_TABLET_USB_AIPTEK=y		
+CONFIG_TABLET_USB_GTCO=y		
+CONFIG_TABLET_USB_HANWANG=y		
+CONFIG_TABLET_USB_KBTAB=y		
+CONFIG_TABLET_USB_WACOM=y
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
