--- a/arch/arm/configs/nvmtw_defconfig
+++ b/arch/arm/configs/nvmtw_defconfig
@@ -39,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermore-v8.2-26102016"
+CONFIG_LOCALVERSION=".nevermore-v8.8-29122016"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1539,7 +1539,16 @@ CONFIG_SENSORS_HALL=y
 # CONFIG_GPIO_CM is not set
 CONFIG_KEYBOARD_CYPRESS_TOUCH=y
 # CONFIG_INPUT_MOUSE is not set
-# CONFIG_INPUT_JOYSTICK is not set
+CONFIG_INPUT_JOYSTICK=y
+CONFIG_JOYSTICK_XPAD_FF=y		
+CONFIG_JOYSTICK_XPAD_LEDS=y		
+CONFIG_INPUT_TABLET=y		
+CONFIG_TABLET_USB_ACECAD=y		
+CONFIG_TABLET_USB_AIPTEK=y		
+CONFIG_TABLET_USB_GTCO=y		
+CONFIG_TABLET_USB_HANWANG=y		
+CONFIG_TABLET_USB_KBTAB=y		
+CONFIG_TABLET_USB_WACOM=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
