i9500: version 9.2, cfq default i/o sched, optimize default ondemand and hotplug
Signed-off-by: jwchen1259 <jwchen1259@gmail.com>

--- a/drivers/gpu/pvr/Makefile
+++ b/drivers/gpu/pvr/Makefile
@@ -21,7 +21,7 @@ ccflags-y := \
 	-Wno-sign-compare\
 	-fno-strict-aliasing\
 	-Wno-pointer-arith\
-	-O3
+	-Ofast
 
 ccflags-y += -DLINUX -D__linux__ -DANDROID
 
