--- a/arch/arm/configs/nvmtw_defconfig
+++ b/arch/arm/configs/nvmtw_defconfig
@@ -39,7 +39,7 @@ CONFIG_EXPERIMENTAL=y
 # CONFIG_ZEN_INTERACTIVE is not set
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=".nevermoretw-v9.4-06022017"
+CONFIG_LOCALVERSION=".nevermoretw-v9.4.2-08022017"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -2860,7 +2860,7 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 # CONFIG_ANDROID_LMK_ADJ_RBTREE is not set
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
-# CONFIG_VNSWAP is not set
+CONFIG_VNSWAP=y
 CONFIG_CLKDEV_LOOKUP=y
 
 #
